2007-12-26  Joel Brobecker  <brobecker@adacore.com>

	* dwarf2read.c (read_base_type): Fix obvious &&/|| confusion.

2007-12-26  Luis Machado  <luisgpm@br.ibm.com>

	* dwarf2-frame.c (execute_cfa_program): Call dwarf2_restore_rule
	function to handle required actions for the DW_CFA_restore and
	DW_CFA_restore_extended instructions.
	(dwarf2_restore_rule): New function.

2007-12-24  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_is_character_type): Add recognition of type
	"Wide_Wide_Character".

2007-12-24  Joel Brobecker  <brobecker@adacore.com>

	* dwarf2read.c (read_base_type): Set code to TYPE_CODE_CHAR
	for char and unsigned char types of Ada compilation units.
	* ada-lang.c (ada_is_character_type): Always return true if
	the type code is TYPE_CODE_CHAR.

2007-12-23  Joel Brobecker  <brobecker@adacore.com>

	* infrun.c (handle_inferior_event): Remove code that made us
	stop when stepping into the last line of the current function.

2007-12-22  Pierre Muller  <muller@ics.u-strasbg.fr>

	* win32-nat.c: Fix PR gdb/2388.
	(do_win32_fetch_inferior_registers): Do not overwrite debug register
	array dr if debug_registers_changed variable is set.

2007-12-22  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwarf2read.c (scan_partial_symbols partial_die_parent_scope)
	(add_partial_symbol, pdi_needs_namespace, process_die)
	(is_type_tag_for_partial, load_partial_dies, new_symbol)
	(read_type_die, determine_prefix): Extend the current code of
	`DW_TAG_class_type' also for `DW_TAG_interface_type'.

2007-12-21  Paul N. Hilfinger  <hilfinger@adacore.com>

	* ada-lang.h (ada_renaming_category): New enumerated type.
	(ada_lookup_encoded_symbol): Declare.
	(ada_parse_renaming): Declare.
	(ada_renaming_type,ada_is_object_renaming)
	(ada_simple_renamed_entity): Delete declarations.
	* ada-lang.c (ada_parse_renaming): New function to concentrate
	extraction of information from renaming symbols.
	(parse_old_style_renaming): New function to concentrate